[improvement] Weekly Report: tweak the CSS of the giant bug count to align better

--- a/app/assets/stylesheets/application/weekly_report.scss
+++ b/app/assets/stylesheets/application/weekly_report.scss
@@ -265,7 +265,7 @@
     &.total-bugs {
       border-radius: 60px;
       -webkit-box-shadow: inset 0 0 3px #aaaaaa;
-      font-size: 7em;
+      font-size: 6.25em;
       font-weight: 100;
       text-align: center;
       height: 102px;
@@ -276,7 +276,7 @@
       
       img {
         position: absolute;
-        left: -4px;
+        left: 0;
         top: -1px;
         opacity: 0.25;
         width: 112px;
